Add comprehensive tests for payment calculation domain
- Add tests for DefaultCheckAmountCalculator covering item write-offs, session write-offs, rounding remainders, and ordering
- Add invariant and edge-case tests for CheckQuote and PaidItem
- Add tests for SessionItemSnapshot and PaymentCalculationContext validation rules
- Add tests for DiscountCalculator for percent and flat discounts, rounding, and invalid inputs
- Cover failure paths such as zero net amounts, currency mismatches, and invalid selections